added second page

--- a/index.html
+++ b/index.html
@@ -13,17 +13,20 @@
   <h3>Intro</h3>
   <p>Hello.  I am Rob.  I am currently taking a Data Sci class.</p>
   <p>I really like to spend every moment I can on my motorcycle.</p>
-  <br></br>
-<iframe type="text/html" width="640" height="390" src="https://www.youtube.com/embed/M7lc1UVf-VE?autoplay=1&origin=http://example.com" frameborder="0">
 
-  <h3>Some Todos</h3>
+  <h3>My Contact Info</h3>
   <ol>
     <li><strong>Email:</strong>robchess66@gmail.com</li>
-    <li>Learn CSS</li>
-    <li>Learn JavaScript</li>
+    <li><strong>Twitter</strong>Twitter Address</li>
+    <li><strong>Instagram</strong>Instagram Address</li>
   <!-- The ol ending tag was missing the backslash -->
   </ol>
 
+  <br>
+
+<iframe type="text/html" width="640" height="390" src="https://www.youtube.com/watch?v=WTN4uu7BlJo" frameborder="0">
+
+  
   <h3>Some Helpful Links</h3>
   <ul>
     <li><a href="http://html5doctor.com/" target="_blank">HTML5 Doctor</a></li>
