added second page again

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
   <br>
 
-<iframe type="text/html" width="640" height="390" src="https://www.youtube.com/watch?v=WTN4uu7BlJo" frameborder="0">
+<!-- <iframe type="text/html" width="640" height="390" src="https://www.youtube.com/watch?v=WTN4uu7BlJo" frameborder="0">-->
 
   
   <h3>Some Helpful Links</h3>
   <ul>
-    <li><a href="http://html5doctor.com/" target="_blank">HTML5 Doctor</a></li>
+    <li><a href="page2.html" target="_blank">HTML5 Doctor</a></li>
   </ul>
 
 <body>
